# facet-axum

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.config/captain/: config.styx
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration.rs
