[package]
name = "facet-axum"
version = "0.43.1"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-axum"
description = "Axum integration for Facet - extractors and responses using Facet's serialization"
keywords = ["axum", "web", "json", "serialization", "facet"]
categories = ["web-programming", "encoding"]
homepage = "https://facet.rs"

[features]
default = ["json", "form"]
json = ["facet-json/axum"]
form = ["facet-urlencoded/axum"]
yaml = ["facet-yaml/axum"]
toml = ["facet-toml/axum"]
xml = ["facet-xml/axum"]
msgpack = ["facet-msgpack/axum"]
postcard = ["facet-postcard/axum"]
all = ["json", "form", "yaml", "toml", "xml", "msgpack", "postcard"]

[dependencies]
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }
facet-msgpack = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }
facet-xml = { git = "https://github.com/facet-rs/facet-xml", branch = "main", version = "0.43.1", optional = true }
facet-yaml = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }
facet-urlencoded = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", optional = true }

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.1", features = ["all-impls", "doc"] }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }
