[package]
name = "facet-axum"
version = "0.44.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-axum"
description = "Axum integration for Facet - extractors and responses using Facet's serialization"
keywords = ["axum", "web", "json", "serialization", "facet"]
categories = ["web-programming", "encoding"]
homepage = "https://facet.rs"

[features]
default = ["json", "form"]
json = ["facet-json/axum"]
form = ["facet-urlencoded/axum"]
yaml = ["facet-yaml/axum"]
toml = ["facet-toml/axum"]
xml = ["facet-xml/axum"]
msgpack = ["facet-msgpack/axum"]
postcard = ["facet-postcard/axum"]
all = ["json", "form", "yaml", "toml", "xml", "msgpack", "postcard"]

[dependencies]
facet-json = { version = "0.44.0", optional = true }
facet-msgpack = { version = "0.44.0", optional = true }
facet-postcard = { version = "0.44.0", optional = true }
facet-toml = { version = "0.44.0", optional = true }
facet-xml = { version = "0.44.0", optional = true }
facet-yaml = { version = "0.44.0", optional = true }
facet-urlencoded = { version = "0.44.0", optional = true }

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
facet = { version = "0.44.0", features = ["all-impls", "doc"] }
tokio = { version = "1", features = ["io-util", "rt", "rt-multi-thread"] }
tower = { version = "0.5", default-features = false, features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }
